<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="French">Français</string>
    <string name="German">Deutsch</string>
    <string name="Setting">Setting</string>
    <string name="a_codec">a-codec</string>
    <string name="album_classify">Classify</string>
    <string name="album_view">Album View</string>
    <string name="alias">Alias:</string>
    <string name="alias_setting_failed">Alias cannot be empty!</string>
    <string name="alias_setting_success">Alias set success!</string>
    <string name="app_version">Current Application Version：</string>
    <string name="audio_decoder">a_dec</string>
    <string name="audio_sample_rate">a_rate</string>
    <string name="brightness_text">Brightness:</string>
    <string name="btn_help_text">ABOUT</string>
    <string name="btn_ok">Sure</string>
    <string name="btn_quit_text">Quit</string>
    <string name="btn_set_text">Setting</string>
    <string name="btn_vedio_text">Video</string>
    <string name="cali">Please calibrate before take-off!!</string>
    <string name="calibration">Calibrate</string>
    <string name="cancel">Cancel</string>
    <string name="cancle">Cancle</string>
    <string name="cancledele">CANCEL</string>
    <string name="channel1_text">Channel1</string>
    <string name="channel2_text">Channel2</string>
    <string name="channel4_text">Channel3</string>
    <string name="chinese">中文</string>
    <string name="classical_mode">Classic</string>
    <string name="classical_tips_text">Finger sliding the top of interface can control the drone yaw.</string>
    <string name="con_file">Folder</string>
    <string name="con_land">Land</string>
    <string name="connecterror">connect error</string>
    <string name="connecting">connecting...</string>
    <string name="connecting_to_device">Connecting...</string>
    <string name="connection_timeout">connection timeout</string>
    <string name="connectsucces">connect success</string>
    <string name="contrast_text">Contrast:</string>
    <string name="control_mode">Control Mode</string>
    <string name="counter_format">%1$d / %2$d</string>
    <string name="default_time_format">00:00</string>
    <string name="delete_photo_file">Delete photo?</string>
    <string name="delete_record_file">Delete record?</string>
    <string name="deletephoto">DELETE PHOTO</string>
    <string name="deletevideo">DELETE VIDEO</string>
    <string name="deleting_tip">Delete files, please wait</string>
    <string name="dev_refused_access">device refused access</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_exit">Exit</string>
    <string name="dialog_gpswarning">You need to turn on the GPS!</string>
    <string name="dialog_no">No</string>
    <string name="dialog_ok">Sure</string>
    <string name="dialog_warning">Warning</string>
    <string name="dialog_yes">Yes</string>
    <string name="disconnect">disconnect</string>
    <string name="download_music">Download online music</string>
    <string name="downloading_tip">Download</string>
    <string name="drop_packet_count">drop_count</string>
    <string name="drop_packet_sum">drop_sum</string>
    <string name="empty">EMPTY</string>
    <string name="end_crash_video_task">Crash Video saved successfully, path:%1$s</string>
    <string name="english">English</string>
    <string name="equipment_version">Version</string>
    <string name="error">ERROR</string>
    <string name="error_crash_video_task">Crash video save failed due to %1$s</string>
    <string name="error_input">The input is wrong</string>
    <string name="errorfeed">Feedback</string>
    <string name="errorvideo">ERROR-Please restart the device!</string>
    <string name="fast_backward">fast backward</string>
    <string name="fast_forward">fast forward</string>
    <string name="files_delete">Delete</string>
    <string name="firmware_version">Firmware Version</string>
    <string name="flight_mode">Flight Mode</string>
    <string name="flip_text">Flip:</string>
    <string name="ftp_client_exception">FTPClient error!</string>
    <string name="ftp_socket_err">Network connection failed</string>
    <string name="gps_wifi">You need to turn on the GPS to get WIFI information</string>
    <string name="hand_mode">Palm Mode</string>
    <string name="help">Help</string>
    <string name="help_text">Help</string>
    <string name="hide_mode">Implicit Rocker</string>
    <string name="how_toconnect_txt">How to connect to devices Wi-fi</string>
    <string name="huaxian">The current mode is track navigation!!</string>
    <string name="id_doubleClickToExit">Press it again to exit</string>
    <string name="input_name">Input name</string>
    <string name="input_new_pwd">Input new password</string>
    <string name="input_new_pwd_again">Input new password again</string>
    <string name="input_pwd">Input password</string>
    <string name="instructions">Specification</string>
    <string name="isfollow">is following now</string>
    <string name="ismastermode">The current mode is following!</string>
    <string name="isrear">The current is the back shot!</string>
    <string name="isvr">The current mode is VR!!</string>
    <string name="know">GOT IT</string>
    <string name="language">Language</string>
    <string name="latest_version">This is the latest version</string>
    <string name="left_mode">Left Hand</string>
    <string name="master_mode">Master Mode</string>
    <string name="media_list">Media List</string>
    <string name="music_lib">MusicLibrary</string>
    <string name="no_rearCamera">This device dose not support a rear camera!</string>
    <string name="no_text">No</string>
    <string name="no_wifi">Disconnection</string>
    <string name="no_wifi_txt">NO WIFI CONNECTION</string>
    <string name="nosupport">Hd mode is not supported</string>
    <string name="not_found_phone_sdcard">Please insert the phone memory card first</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="open_gps">Please turn on the GPS to get the WIFI information！</string>
    <string name="open_wifi">WIFI Setting</string>
    <string name="opening_wifi">WIFI is opening!</string>
    <string name="pair_txt">PLEASE PAIR YOUR DEVICE</string>
    <string name="parm_set">Parammeters Setting</string>
    <string name="phone_space_inefficient">"Your phone doesn't have enough storage！"</string>
    <string name="photo_album">Album</string>
    <string name="pwd">Password:</string>
    <string name="pwd_diff">The two passwords do not match!</string>
    <string name="pwd_error">Password error!</string>
    <string name="pwd_length_tipes">Password length is greater than or equal to a minimum of 5 characters</string>
    <string name="pwd_level_0">Password Level: Very weak</string>
    <string name="pwd_level_1">Password Level: Weak</string>
    <string name="pwd_level_3">Password Level: Medium</string>
    <string name="pwd_level_4">Password Level: Strong</string>
    <string name="pwd_level_5">Password Level: Very strong</string>
    <string name="pwd_modification">Password modification</string>
    <string name="pwd_setting">seting...</string>
    <string name="pwd_setting_failed">Password set failed!</string>
    <string name="pwd_setting_success">Password set success!</string>
    <string name="rear_cmarea">sorry,rear camera now</string>
    <string name="record">Record</string>
    <string name="render0">Natural</string>
    <string name="render1">Nostalgia</string>
    <string name="render2">Beautiful</string>
    <string name="render3">Lively</string>
    <string name="render4">Graceful</string>
    <string name="render5">Cold</string>
    <string name="render6">Exposed</string>
    <string name="render7">Negative</string>
    <string name="render8">Empaistic</string>
    <string name="reset_parms">Reset</string>
    <string name="reset_suc">Reset success</string>
    <string name="right_mode">Right Hand</string>
    <string name="rudder_mode">Rocker</string>
    <string name="saturation_text">Saturation</string>
    <string name="save_alias">save</string>
    <string name="save_parms">Auto Save Parammeters</string>
    <string name="save_pwd">save</string>
    <string name="savesuccess">Recording success!</string>
    <string name="sdcard_error">SDCard offlin</string>
    <string name="sdcard_offline">SDCard offline</string>
    <string name="sdcard_online">SDCard online</string>
    <string name="sensitivity_text">Sensitivity</string>
    <string name="setting_name">Name set</string>
    <string name="setting_pwd">Password set</string>
    <string name="sharpness_text">Sharpness</string>
    <string name="snapshot">Snapshot</string>
    <string name="start">Start flying</string>
    <string name="start_crash_video_task">saving collision detection video, please do not exit</string>
    <string name="start_hf">Start</string>
    <string name="submit">Submit</string>
    <string name="sure">Sure</string>
    <string name="take_off">Take Off</string>
    <string name="take_photo_failed">take photo fail reason：%1$s</string>
    <string name="take_photo_success">take photo success</string>
    <string name="take_video_close_failed">Take video failed：%1$s</string>
    <string name="take_video_open_failed">Take video failed：%1$s</string>
    <string name="tip_1">1.The effective follow-up distance between the aircraft and the target person is about 1.5m;</string>
    <string name="tip_2">2.High-performance phones with android 7.0 or higher work better；</string>
    <string name="tip_3">3.Please operate indoors or outdoors with less than 2 winds.</string>
    <string name="tips5">Swiping up and down automatically rotates the screen</string>
    <string name="title_exit">Exit</string>
    <string name="trim_parms">Parammeters</string>
    <string name="turn_left">Turn Left</string>
    <string name="turn_right">Turn Right</string>
    <string name="uisetting">Page Setting</string>
    <string name="unnamed">CONNECT</string>
    <string name="update">Update</string>
    <string name="update_fail">update fail</string>
    <string name="update_succ">update success</string>
    <string name="update_tip">Download the lastest version for more exciting content!!</string>
    <string name="upgrade">Firmware update</string>
    <string name="upgrading">updating</string>
    <string name="upload_file_failed">Upload file failed!</string>
    <string name="upload_file_success">Upload file success!</string>
    <string name="v_codec">v-codec</string>
</resources>