<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@drawable/src_set_language_mode" android:layout_width="680.0dip" android:layout_height="300.0dip" android:layout_centerInParent="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="12.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/text1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/tip_1" android:layout_centerHorizontal="true" />
    <TextView android:textSize="12.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/text2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/tip_2" android:layout_below="@id/text1" android:layout_centerHorizontal="true" />
    <TextView android:textSize="12.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/text3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/tip_3" android:layout_below="@id/text2" android:layout_centerHorizontal="true" />
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/text3">
        <TextView android:textSize="16.0sp" android:textColor="@drawable/text_press" android:gravity="center" android:id="@id/text_cancel" android:background="@mipmap/dialog_b" android:clickable="true" android:layout_width="0.0dip" android:layout_height="30.0dip" android:layout_marginLeft="30.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="10.0dip" android:text="@string/cancel" android:layout_weight="1.0" android:layout_centerHorizontal="true" />
        <TextView android:textSize="16.0sp" android:textColor="@drawable/text_press" android:gravity="center" android:id="@id/text_sure" android:background="@mipmap/dialog_b" android:clickable="true" android:layout_width="0.0dip" android:layout_height="30.0dip" android:layout_marginLeft="20.0dip" android:layout_marginRight="30.0dip" android:layout_marginBottom="10.0dip" android:text="@string/submit" android:layout_weight="1.0" android:layout_below="@id/text1" android:layout_centerHorizontal="true" />
    </LinearLayout>
</RelativeLayout>